# Groove-Box

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  ruff.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: models.py
frontend/: Dockerfile  package.json
