[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ian-mcquade <ijwmcquade@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
python-dotenv = "^1.0.1"
pydantic = {extras = ["dotenv"], version = "^2.10.6"}
sqlalchemy = "^2.0.38"
aiofiles = "^24.1.0"
asyncio = "^3.4.3"
fastapi = {extras = ["standard"], version = "^0.115.8"}
ruff = "^0.9.6"
black = "^25.1.0"
psycopg2-binary = "^2.9.10"
pydantic-settings = "^2.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"
isort = "^6.0.0"
ruff = "^0.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
